fix: resolve 8 critical issues from final review